2.10.3
-----


2.10.2
-----
(RB=496878)
Fix build.gradle signing process to enable mavin release.

2.10.1
-----
(RB=523443)
Fix a bug in FileStore where IllegalArgumentException may throw if temp file 
prefix contains fewer than three characters

2.10.0
-----
(RB=496345)
Add schema based autoprojection utility methods.

(RB=489544)
Restructured API for exposing response data to rest.li filters.
Exposed per-exception ErrorResponse formatter for RestLiServiceException.

(RB=516008)
Fixed inconsistency with exception handling for async resources.

2.9.1
-----
(RB=518092)
Add configuration for maximum number of R2 concurrent connection attempts

2.9.0
-----
(RB=516089)
Upgrade commons.io to version 2.4

2.8.0
-----
(RB=514364)
Fix AbstarctClient to NOT share RequestContext across multiple requests.

(RB=514916)
Make AbstractR2Servlet handles requests with chunked encoding

2.7.0
-----
(RB=504603)
Enable file resolution for SchemaTranslator and propagate validation options to all parsers spawned during schema translation.

(RB=506427)
Fail faster for bad requests with unknown hostname in HttpNettyClient.

2.6.3
-----
(RB=501374)
Made generation of path spec methods, copier methods and record remove method in data template
configurable.

2.6.2
-----
(RB=484780)
Fixed a bug in typeref processing in request params.

(RB=490692)
Prepare data template generator for extension.

2.6.1
------
(RB=477748)
Remove unused dependency to mina-core.

(RB=484311)
Factor out compression filter implementations to a new module (r2-filter-compression).

(RB=484411)
Remove unnecessary generator dependency from modules that generates data template.
Remove unnecessary data-avro-generator dependency from modules that generates avro schema.

(RB=484897)
Create IOUtil class to remove r2-core's dependency on commons-io.

(RB=490213)
Fix trackerclient deleting racing problem.

2.6.0
------
(RB=475062)